# IntentRecognizer

./: README.md
EmbeddedIntentRecognizer/: CMakeLists.txt
EmbeddedIntentRecognizer/data/: intent.csv
EmbeddedIntentRecognizer/src/: CMakeLists.txt  csv.cpp  csv.h  csvrow.cpp  csvrow.h  fs.cpp  fs.h  input.cpp  input.h  main.cpp
EmbeddedIntentRecognizer/test/: CMakeLists.txt  test_csv.cpp  test_csvrow.cpp  test_csvrow.csv  test_input.cpp
LSTIM_IntentRecognizer/: intent_data.csv  intentclassifier.ipynb
